# tileline

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MPS-BENCHMARK.md  README.md  SECURITY.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: README.md  alpha-foss-ui-assets.md  engine-architecture-api-core.md  gms-dispatch-planner.md  mgs-orangepi5-validation.md  mgs-scene-workload.md  nps-protocol.md  nps-runtime-plan.md  paradoxpe-foundation.md  paradoxpe-tlscript-examples.md  paradoxpe-v0.5.0-c0-parallelization-checklist.md  pmta-payload-synthesis.md  runtime-android.md  runtime-bridge-flow.md  runtime-draw-hud.md  runtime-mas.md  runtime-pak.md  runtime-scene-showcase.md  runtime-scene-workload.md  runtime-scheduler-path.md  runtime-tlapp-console.md  runtime-tljoint.md  runtime-tlpfile-gui.md  runtime-tlscript-showcase.md  runtime-tlsprite.md  runtime-upscaler.md  tileline-alpha-plan.md  tileline-beta-roadmap.md  tileline-pre-alpha-transition.md  tileline-pre-beta-fsr-plan.md  tileline-v0.3.0-foundation.md  tileline-v0.4.5-roadmap.md  tileline-v0.5.0-roadmap.md  tileline-v0.5.5-roadmap.md  tlscript-lexer.md  tlscript-parallel-runtime.md  tlscript-parser-plan.md  tlscript-semantic.md  tlscript-v0.4.5-guide.md
docs/demos/: README.md  sphere.fbx  tlscript-first-demo.md
docs/releases/: v0.1.0.md  v0.2.0-github.md  v0.2.0.md  v0.2.1-github.md  v0.2.1.md  v0.3.0-github.md  v0.3.0.md  v0.4.0-github.md  v0.4.0.md  v0.4.5-github.md  v0.4.5.1-github.md  v0.4.5.1-release-checklist.md  v0.4.5.1.md  v0.4.5.md
gms/: Cargo.toml
gms/benches/: gms_bench.rs
gms/examples/: gms_bench_visual.rs  render_benchmark.rs
gms/src/: adaptive_buffer.rs  bridge.rs  hardware.rs  lib.rs  multi_gpu_runtime.rs  render_benchmark.rs  scene_workload.rs  tuning.rs
mgs/: Cargo.toml
mgs/benches/: mgs_bench.rs
mgs/examples/: render_benchmark.rs  scene_workload_plan.rs
mgs/src/: bridge.rs  fallback.rs  hardware.rs  lib.rs  render_benchmark.rs  runtime.rs  scene_workload.rs  tile_planner.rs  tuning.rs  zram.rs
mps/: Cargo.toml
mps/examples/: mps_microbench.rs  payload_bruteforce.rs  strict_key_decode.rs  wasm_task_demo.rs
mps/src/: key_bruteforce.rs  key_decode.rs  lib.rs  mobile_bridge.rs  thread_pool.rs  worker.rs
mps/src/balancer/: mod.rs
mps/src/scheduler/: dispatcher.rs  mod.rs  queue.rs
mps/src/topology/: detector.rs  mod.rs
nps/: Cargo.toml
nps/examples/: starter_packet.rs
nps/src/: bitpack.rs  lib.rs  manager.rs  model.rs  packet.rs  reliability.rs
paradoxpe/: Cargo.toml
paradoxpe/src/: abi.rs  body.rs  broadphase.rs  compute.rs  handle.rs  joint.rs  lib.rs  narrowphase.rs  parallel.rs  sleep.rs  snapshot.rs  solver.rs  storage.rs  world.rs
runtime/: Cargo.toml
runtime/examples/: auto_scene_scheduler.rs  bounce_tank_showcase.rs  pak_tool.rs  tlapp.rs  tljoint_runner.rs  tlscript_first_demo.rs  tlsprite_list_editor.rs  wgpu_scene_showcase.rs
runtime/examples/assets/: bounce_hud.tlsprite  bounce_showcase.tlscript  bounce_showcase_mobile_safe.tljoint  bounce_showcase_mobile_safe.tlscript
runtime/examples/common/: tlapp_app.rs
runtime/src/: app_runner.rs  draw_path.rs  frame_loop.rs  lib.rs  mas.rs  metal_scene_renderer.rs  mgs_frame_loop.rs  mobile_scene_dispatch.rs  mobile_scene_workload.rs  network_transport.rs  pak.rs  physics_mps_runner.rs  pre_alpha_loop.rs  runtime_bridge.rs  scene.rs  scene_dispatch.rs  scene_workload.rs  scheduler_path.rs  telemetry_hud.rs  tile_world_2d.rs  tlapp_app.rs  tljoint.rs  tlpfile.rs  tlpfile_gui.rs  tlscript_parallel.rs  tlscript_showcase.rs  tlsprite.rs  tlsprite_editor.rs  tlsprite_editor_cli.rs  upscaler.rs  versioning.rs  vulkan_scene_renderer.rs  vulkan_snapshot.rs  wgpu_render_loop.rs  wgpu_scene_renderer.rs
runtime/src/tlapp_app/: camera.rs  cli.rs  console.rs  fps.rs  mod.rs  runtime_console.rs  runtime_init.rs  runtime_input.rs  runtime_render.rs  runtime_scene.rs
runtime/src/wgpu_scene_renderer/: mod.rs  scene_3d.wgsl  scene_3d_rt.wgsl  scene_shadow.wgsl  scene_sprite.wgsl  scene_upscale.wgsl
scripts/: build_android_apk.sh  build_tlpfile_pak.sh  build_tlscript_pdf.sh  fetch_alpha_ui_assets.sh  package_prebeta_pak.sh  release_v0.1.0.sh  release_v0.2.0.sh  release_v0.2.1.sh  release_v0.3.0.sh  release_v0.4.5.1.sh  release_v0.4.5.sh  setup_cross_toolchains.sh  test_mgs_orangepi5.sh
tl-core/: Cargo.toml
tl-core/assets/shaders/spv/: scene.frag.spv  scene.vert.spv
tl-core/src/: lib.rs
tl-core/src/core/: bridge.rs  mgs_bridge.rs  mod.rs
tl-core/src/graphics/: frame_snapshot.rs  metal_backend.rs  metal_physics_compute.rs  mod.rs  vulkan_backend.rs  vulkan_physics_compute.rs
tl-core/src/graphics/multigpu/: mod.rs  sync.rs
tl-core/src/tlscript/: ast.rs  codegen.rs  lexer.rs  lowering.rs  mod.rs  net_hook.rs  parallel_advisor.rs  parallel_hook.rs  parallel_runtime.rs  parser.rs  semantic.rs  token.rs  typed_ir.rs
tl-core/tests/: paradoxpe_tlscript_examples.rs
(+18 files in other folders)
