[workspace]
members = ["gms", "mgs", "nps", "paradoxpe", "runtime", "tl-core"]
resolver = "2"

[workspace.package]
version = "0.4.5"
edition = "2021"
license = "MPL-2.0"

[workspace.dependencies]
crossbeam = "0.8.4"
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
hecs = "0.11.0"
nalgebra = "0.34.1"
num_cpus = "1.17.0"
raw-cpuid = "11.6.0"
tokio = "1.49.0"
wasmer = "7.0.1"
wgpu = "28.0.0"
winit = "0.30.12"
wit-bindgen = "0.53.1"
criterion = { version = "0.5", features = ["html_reports"] }
