[package]
name = "mgs"
version.workspace = true
edition.workspace = true

# Mobile Graphics Scheduler (MGS)
# GMS'e sıfır bağımlılık. Mobil platform ve serial fallback odaklı.

[dependencies]
wgpu.workspace = true
winit.workspace = true
pollster = "0.4.0"

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "mgs_bench"
harness = false
