[package]
name = "mps"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
cbc = { version = "0.1.2", features = ["block-padding"] }
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
crossbeam.workspace = true
ctr = "0.9.2"
hmac = "0.12.1"
hex = "0.4.3"
hkdf = "0.12.4"
md-5 = "0.10.6"
miniz_oxide = "0.8.9"
num_cpus.workspace = true
percent-encoding = "2.3.1"
raw-cpuid.workspace = true
rayon.workspace = true
sha1 = "0.10.6"
sha2 = "0.10.9"
wasmer.workspace = true
