[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["gamepad"]
gamepad = ["dep:gilrs"]

[dependencies]
tl-core = { path = "../tl-core" }
wgpu.workspace = true
gms = { path = "../gms" }
mgs = { path = "../mgs" }
mps = { path = "../mps" }
nps = { path = "../nps" }
paradoxpe = { path = "../paradoxpe" }
tokio = { workspace = true, features = ["net", "time", "rt", "macros"] }
nalgebra.workspace = true
rayon.workspace = true
num_cpus.workspace = true
notify = "6.1.1"
bytemuck = { version = "1.17.1", features = ["derive"] }
winit.workspace = true
fbx = "0.2.0"
pollster = "0.4.0"
gilrs = { version = "0.11.0", optional = true }

[dev-dependencies]
