[package]
name = "runtime"
version = "0.3.0"
edition = "2021"

[package.metadata.android]
package = "dev.tileline.runtime"
build_targets = ["aarch64-linux-android"]
min_sdk_version = 29
target_sdk_version = 34

[features]
default = ["gamepad", "parallel_pipeline_v2"]
gamepad = ["dep:gilrs"]
parallel_pipeline_v2 = []

[dependencies]
tl-core = { path = "../tl-core" }
wgpu.workspace = true
gms = { path = "../gms" }
mgs = { path = "../mgs" }
mps = { path = "../mps" }
nps = { path = "../nps" }
paradoxpe = { path = "../paradoxpe" }
tokio = { workspace = true, features = ["net", "time", "rt", "macros"] }
nalgebra.workspace = true
rayon.workspace = true
num_cpus.workspace = true
crossbeam.workspace = true
notify = "6.1.1"
bytemuck = { version = "1.17.1", features = ["derive"] }
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
fbx = "0.2.0"
pollster = "0.4.0"
gilrs = { version = "0.11.0", optional = true }
font8x8 = "0.3.1"
regex = "1.11.1"

[dev-dependencies]
